deploy/k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pensgame
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/issue-temporary-certificate: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - secretName: pensgame-live-tls
      hosts:
        - pensgame.lol
        - www.pensgame.lol
  rules:
    - host: pensgame.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pensgame
                port:
                  number: 80
    - host: www.pensgame.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pensgame
                port:
                  number: 80
